--- a/ShareClassWebAPI/ShareClassWebAPI/Views/ClassRooms/Delete.cshtml
+++ b/ShareClassWebAPI/ShareClassWebAPI/Views/ClassRooms/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ShareClassWebAPI.Entities.ClassRoom
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "DeleteAsync";
 }
 
-<h1>Delete</h1>
+<h1>DeleteAsync</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -55,9 +55,9 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="DeleteAsync">
         <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="DeleteAsync" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
