--- a/ShareClassWebAPI/ShareClassWebAPI/Views/ClassRooms/Index.cshtml
+++ b/ShareClassWebAPI/ShareClassWebAPI/Views/ClassRooms/Index.cshtml
@@ -63,7 +63,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="DeleteAsync" asp-route-id="@item.ID">DeleteAsync</a>
             </td>
         </tr>
 }
