--- a/share-class-react/src/components/classRoom/style.css
+++ b/share-class-react/src/components/classRoom/style.css
@@ -1,6 +1,83 @@
-.ClassRoom {
-    font-size: large;
+.classRoomsContainer {
+    display: flex;
+    flex-wrap: wrap;
 }
-.HomeTask {
-    padding: 10px;
+
+.classRoom {
+    position: relative;
+    width: 300px;
+    height: 200px;
+    margin: 20px;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.classRoomButtons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.copyInvitationCodeButton,
+.leaveClassRoomButton,
+.deleteClassRoomButton {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: #333;
+    padding: 0;
+    width: 25px;
+    height: 25px;
+}
+
+.leaveClassRoomButton {
+    margin: 1px -4px 1px -2px;
+    width: 22px;
+    height: 22px;
+}
+
+.copyInvitationCodeButton img,
+.leaveClassRoomButton img,
+.deleteClassRoomButton img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.classRoomName {
+    font-weight: bold;
+    font-size: x-large;
+    margin: 0;
+}
+
+.classRoomTeacher {
+    margin: 0;
+    font-size: medium;
+    align-self: flex-start;
+}
+
+.addOrJoinClassRoomDropDown {
+    height: 45px;
+}
+
+.addOrJoinClassRoomButton {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: #333;
+    padding: 0;
+    width: 45px;
+    height: 45px;
+}
+
+.addOrJoinClassRoomButton img {
+    max-width: 100%;
+    max-height: 100%;
 }
